--- a/frontend/components/BalanceCardForm/BalanceCardForm.module.css
+++ b/frontend/components/BalanceCardForm/BalanceCardForm.module.css
@@ -47,3 +47,12 @@
 .checkButton:active {
   background-color: #444;
 }
+
+.errorMessage {
+  margin-top: 5px;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  color: #FF4D00;
+  text-align: center;
+}
